--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,16 @@
 	
 	<div class="wrapper">
 		<div id="left_content">
-			<!-- <h2>Listagem</h2>
+			<h2>Novo CEC</h2>
 						<fieldset>
-							<p><%= label_tag :quantidade_de_entregadores %>
-							<%= text_field_tag :cec %></p>
-							<%= date_select :cec, :data_da_entrega, {:order => [:day, :month, :year], :discard_year => true} %>
-						</fieldset> -->
+							<% form_tag new_cec_path, :method => 'get' do %>
+							  <p>
+								<%= label_tag :cep %>
+							    <%= text_field_tag :cep, params[:cep] %>
+							    <%= submit_tag "Novo", :name => nil %>
+							  </p>
+							<% end %>
+						</fieldset>
 			
 			<h2>Pesquisa CEC</h2>
 			<fieldset>
