--- a/app/views/cecs/_form.html.erb
+++ b/app/views/cecs/_form.html.erb
@@ -45,6 +45,12 @@
     <%= f.label :endereco %><br />
     <%= f.text_field :endereco %>
   </div>
+
+  <div class="field">
+    <%= f.label :numero %><br />
+    <%= f.text_field :numero %>
+  </div>
+
   <div class="field">
     <%= f.label :complemento %><br />
     <%= f.text_field :complemento %>
