--- a/app/views/cecs/index.html.erb
+++ b/app/views/cecs/index.html.erb
@@ -10,7 +10,7 @@
 			<td>REQ<br/><%= link_to cec.numero_do_pedido, cec%></td>
 			<td><%= link_to cec.nome_do_cliente, cec %><br/>
 				<i>Endereço <%= cec.comercial? ? "Comercial" : "Residencial" %></i><br/>
-			  	<%= cec.endereco %>, <%= cec.complemento %><br/>
+			  	<%= cec.endereco %>, <%= cec.numero %><%= " - " + cec.complemento if cec.complemento%><br/>
 			  	<%= cec.bairro %> - <%= cec.cidade %><br/>
 			  	CEP: <b><%= cec.cep %></b>
 				</td>
