--- a/app/views/cecs/_form.html.erb
+++ b/app/views/cecs/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_for(@cec) do |f| %>
   <% if @cec.errors.any? %>
     <div id="error_explanation">
@@ -41,6 +42,9 @@
   </div>
 
   <fieldset>
+	<h2><%= number_with_precision(@cec.distancia_da_farmacia, :precision => 3, :separator => " Km e ") %></h2>
+	<i>A distância é uma média, só pode ser confirmada quando o Cec estiver salvo</i>
+	<!-- <h2>Valor SEDEX: #@cec.sedex </h2> -->
   <div class="field">
     <%= f.label :cep %><br />
     <%= f.text_field :cep %>
