--- a/app/views/cecs/index.html.erb
+++ b/app/views/cecs/index.html.erb
@@ -9,6 +9,7 @@
 		<tr>
 			<td>CEC<br/><%= cec.id %></td>
 			<td>REQ<br/><%= link_to cec.numero_do_pedido, cec%><br/>
+				<i><%= cec.user.username if cec.user %></i>
 				</td>
 			<td><%= link_to cec.nome_do_cliente, cec %><br/>
 				<i>Endereço <%= cec.comercial? ? "Comercial" : "Residencial" %></i><br/>
@@ -22,7 +23,7 @@
 				<%= cec.forma_de_pagamento %></td>
 			<td>
 				<% Entregador.find(:all).each do |e| %>
-					<%= radio_button_tag "entregador_cec[#{cec.id}]", e.id, cec.entregador.id == e.id %><%= e.nome %><br/>
+					<%= radio_button_tag "entregador_cec[#{cec.id}]", e.id, (cec.entregador and cec.entregador.id == e.id) %><%= e.nome %><br/>
 				<% end %>
 			</td>
 		
