Separando os Entregadores por loja e posibilitando a inativação

--- a/app/views/entregadors/_form.html.erb
+++ b/app/views/entregadors/_form.html.erb
@@ -16,8 +16,7 @@
     <%= f.text_field :nome %>
   </div>
   <div class="field">
-    <%= f.label :filial %><br />
-    <%= f.text_field :filial %>
+    <%= f.check_box :ativo %> Ativo
   </div>
   <div class="actions">
     <%= f.submit %>
