--- a/app/views/cecs/index.html.erb
+++ b/app/views/cecs/index.html.erb
@@ -22,7 +22,7 @@
 			<td>R$<%= number_with_precision(cec.valor, :precision => 2) %><br/>
 				<%= cec.forma_de_pagamento %></td>
 			<td>
-				<% Entregador.find(:all).each do |e| %>
+				<% Entregador.where(:filial => cec.filial, :ativo => true).find(:all).each do |e| %>
 					<%= radio_button_tag "entregador_cec[#{cec.id}]", e.id, (cec.entregador and cec.entregador.id == e.id) %><%= e.nome %><br/>
 				<% end %>
 			</td>
