--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 			<h2><%= link_to "Entregadores", entregadors_path%></h2>
 			<h2>Novo CEC</h2>
 						<fieldset>
-							<% form_tag new_cec_path, :method => 'get' do %>
+							<%= form_tag new_cec_path, :method => 'get' do %>
 							  <p>
 								<%= label_tag :cep %>
 							    <%= text_field_tag :cep, params[:cep] %>
@@ -44,7 +44,7 @@
 			<h2>Pesquisa CEC</h2>
 			<fieldset>
 		
-				<% form_tag cecs_path, :method => 'get' do %>
+				<%= form_tag cecs_path, :method => 'get' do %>
 				  <p>
 					<%= label_tag :por_pedido %>
 				    <%= text_field_tag :numero_do_pedido, params[:numero_do_pedido] %>
@@ -52,7 +52,7 @@
 				  </p>
 				<% end %>
 				
-				<% form_tag cecs_path, :method => 'get' do %>
+				<%= form_tag cecs_path, :method => 'get' do %>
 				  <p>
 					<%= label_tag :por_numero %>
 				    <%= text_field_tag :id, params[:id] %>
@@ -64,16 +64,16 @@
 			<h2>Entregas</h2>
 			<fieldset>
 				<h3><%= link_to "Hoje", cecs_path(:data => Date.today) %></h3>
-				<% Cec.proximas_entregas.each do |d| %>
+				<%= Cec.proximas_entregas.each do |d| %>
 					<h3><%= link_to d.data_da_entrega.strftime("%d/%m "), cecs_path(:data => d.data_da_entrega) %></h3>
 				<% end %>
 				
 				<div id="calendar">
-					<% [Date.today - 1.month, Date.today, Date.today + 1.month].each do |d| %>
+					<%= [Date.today - 1.month, Date.today, Date.today + 1.month].each do |d| %>
 						<h4>Mês <%= d.month %>/<%= d.year %></h4>
-						<% calendar_for(Cec.find(:all), :year => d.year, :month => d.month) do |t| %>
+						<%= calendar_for(Cec.find(:all), :year => d.year, :month => d.month) do |t| %>
 				    		<%= t.head('S', 'T', 'Q', 'Q', 'S', 'S', 'D') %>
-				    			<% t.day do |day, cecs| %>
+				    			<%= t.day do |day, cecs| %>
 				      				<%= link_to day.day, cecs_path(:data => day) %>
 				    			<% end %>
 				  		<% end %>
