--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,16 +64,16 @@
 			<h2>Entregas</h2>
 			<fieldset>
 				<h3><%= link_to "Hoje", cecs_path(:data => Date.today) %></h3>
-				<%= Cec.proximas_entregas.each do |d| %>
+				<% Cec.proximas_entregas.each do |d| %>
 					<h3><%= link_to d.data_da_entrega.strftime("%d/%m "), cecs_path(:data => d.data_da_entrega) %></h3>
 				<% end %>
 				
 				<div id="calendar">
-					<%= [Date.today - 1.month, Date.today, Date.today + 1.month].each do |d| %>
+					<% [Date.today - 1.month, Date.today, Date.today + 1.month].each do |d| %>
 						<h4>Mês <%= d.month %>/<%= d.year %></h4>
-						<%= calendar_for(Cec.find(:all), :year => d.year, :month => d.month) do |t| %>
+						<% calendar_for(Cec.find(:all), :year => d.year, :month => d.month) do |t| %>
 				    		<%= t.head('S', 'T', 'Q', 'Q', 'S', 'S', 'D') %>
-				    			<%= t.day do |day, cecs| %>
+				    			<% t.day do |day, cecs| %>
 				      				<%= link_to day.day, cecs_path(:data => day) %>
 				    			<% end %>
 				  		<% end %>
